--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="name">Name</string>
     <string name="resgister">RESGISTER</string>
     <string name="retype_password">Retype Password</string>
+    <string name="email_adress">Email Adress</string>
 
 
 </resources>
