Add Google map search 11/24/2021

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="resgister">RESGISTER</string>
     <string name="retype_password">Retype Password</string>
     <string name="email_adress">Email Adress</string>
+    <string name="map_key">AIzaSyBrvAAT_-boAuognNl5lwl0B9hUqQQ4kvM</string>
 
 
 </resources>
