add firebase email and rest email login 3/23/2022

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
     <string name="longid">long</string>
     <string name="lat">lat</string>
     <string name="offlineBtn">Offline mode</string>
+    <string name="fgPassword">Forgot password</string>
 
     <string-array name="font_size">
         <item>Small</item>
