--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,6 @@
         <item>Medium</item>
         <item>Large</item>
     </string-array>
-
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
